// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing TodoItem should render correctly adding new item when user changes current value 1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c12 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c4 {
  color: #4d4d4d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  height: 40px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4:last-child:not(:nth-child(-n+2)) {
  border-bottom: 0px;
}

.c2 {
  margin-right: 8px;
}

.c7 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c7:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c8 {
  background-color: #fff;
  border-color: #e6e6e6;
  color: #e6e6e6;
}

.c8 svg {
  fill: #e6e6e6;
}

.c6 {
  color: #4d4d4d font-size:16px;
  height: 20px;
  box-sizing: border-box;
  width: calc(100% - 62px);
}

.c6:hover {
  border-bottom: 1px solid #e6e6e6;
}

.c11 {
  color: #4d4d4d font-size:16px;
  height: 20px;
  box-sizing: border-box;
  display: none;
  width: calc(100% - 62px);
}

.c11:hover {
  border-bottom: 1px solid #e6e6e6;
}

.c5 {
  color: #4d4d4d;
  outline: 0;
  border-width: 0 0 1px;
  border-color: #4d4d4d;
  font-size: 16px;
  height: 20px;
  box-sizing: border-box;
  display: none;
  width: calc(100% - 62px);
}

.c10 {
  color: #4d4d4d;
  outline: 0;
  border-width: 0 0 1px;
  border-color: #4d4d4d;
  font-size: 16px;
  height: 20px;
  box-sizing: border-box;
  width: calc(100% - 62px);
}

.c9 {
  max-width: 16px;
  max-height: 16px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value=" new value"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
           new value
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c10"
          data-testid="inline-edit-input"
          type="text"
          value=""
        />
        <div
          class="c11"
          data-testid="inline-edit-item-content"
        />
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
    </div>
    <div
      class="c12"
    >
      2 items left.
      <button
        class="c7"
        data-testid="todo-list-add-button"
        disabled=""
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing TodoItem should render correctly after user add item 1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c10 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c4 {
  color: #4d4d4d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  height: 40px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4:last-child:not(:nth-child(-n+2)) {
  border-bottom: 0px;
}

.c2 {
  margin-right: 8px;
}

.c7 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c7:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c8 {
  background-color: #fff;
  border-color: #e6e6e6;
  color: #e6e6e6;
}

.c8 svg {
  fill: #e6e6e6;
}

.c6 {
  color: #4d4d4d font-size:16px;
  height: 20px;
  box-sizing: border-box;
  display: none;
  width: calc(100% - 62px);
}

.c6:hover {
  border-bottom: 1px solid #e6e6e6;
}

.c5 {
  color: #4d4d4d;
  outline: 0;
  border-width: 0 0 1px;
  border-color: #4d4d4d;
  font-size: 16px;
  height: 20px;
  box-sizing: border-box;
  width: calc(100% - 62px);
}

.c9 {
  max-width: 16px;
  max-height: 16px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value=""
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        />
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
    </div>
    <div
      class="c10"
    >
      1 item left.
      <button
        class="c7"
        data-testid="todo-list-add-button"
        disabled=""
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing TodoItem should render correctly when user click on a item checkbox  1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c10 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c4 {
  color: #4d4d4d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  height: 40px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4:last-child:not(:nth-child(-n+2)) {
  border-bottom: 0px;
}

.c2 {
  margin-right: 8px;
}

.c7 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c7:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c8 {
  background-color: #fff;
  border-color: #e6e6e6;
  color: #e6e6e6;
}

.c8 svg {
  fill: #e6e6e6;
}

.c6 {
  color: #4d4d4d font-size:16px;
  height: 20px;
  box-sizing: border-box;
  width: calc(100% - 62px);
}

.c6:hover {
  border-bottom: 1px solid #e6e6e6;
}

.c5 {
  color: #4d4d4d;
  outline: 0;
  border-width: 0 0 1px;
  border-color: #4d4d4d;
  font-size: 16px;
  height: 20px;
  box-sizing: border-box;
  display: none;
  width: calc(100% - 62px);
}

.c9 {
  max-width: 16px;
  max-height: 16px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 1"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 1
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <input
          checked=""
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 2"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 2
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 3"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 3
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
    </div>
    <div
      class="c10"
    >
      2 items left.
      <button
        class="c7"
        data-testid="todo-list-add-button"
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing TodoItem should render correctly with all checkbox checked when user click on list checkbox and counter is  0 1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c10 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c4 {
  color: #4d4d4d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  height: 40px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4:last-child:not(:nth-child(-n+2)) {
  border-bottom: 0px;
}

.c2 {
  margin-right: 8px;
}

.c7 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c7:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c8 {
  background-color: #fff;
  border-color: #e6e6e6;
  color: #e6e6e6;
}

.c8 svg {
  fill: #e6e6e6;
}

.c6 {
  color: #4d4d4d font-size:16px;
  height: 20px;
  box-sizing: border-box;
  width: calc(100% - 62px);
}

.c6:hover {
  border-bottom: 1px solid #e6e6e6;
}

.c5 {
  color: #4d4d4d;
  outline: 0;
  border-width: 0 0 1px;
  border-color: #4d4d4d;
  font-size: 16px;
  height: 20px;
  box-sizing: border-box;
  display: none;
  width: calc(100% - 62px);
}

.c9 {
  max-width: 16px;
  max-height: 16px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 1"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 1
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <input
          checked=""
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 2"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 2
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 3"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 3
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
    </div>
    <div
      class="c10"
    >
      3 items left.
      <button
        class="c7"
        data-testid="todo-list-add-button"
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing TodoItem should render correctly with all checkbox checked when user click on list checkbox and counter is not 0  1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c10 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c4 {
  color: #4d4d4d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  height: 40px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4:last-child:not(:nth-child(-n+2)) {
  border-bottom: 0px;
}

.c2 {
  margin-right: 8px;
}

.c7 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c7:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c8 {
  background-color: #fff;
  border-color: #e6e6e6;
  color: #e6e6e6;
}

.c8 svg {
  fill: #e6e6e6;
}

.c6 {
  color: #4d4d4d font-size:16px;
  height: 20px;
  box-sizing: border-box;
  width: calc(100% - 62px);
}

.c6:hover {
  border-bottom: 1px solid #e6e6e6;
}

.c5 {
  color: #4d4d4d;
  outline: 0;
  border-width: 0 0 1px;
  border-color: #4d4d4d;
  font-size: 16px;
  height: 20px;
  box-sizing: border-box;
  display: none;
  width: calc(100% - 62px);
}

.c9 {
  max-width: 16px;
  max-height: 16px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 1"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 1
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <input
          checked=""
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 2"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 2
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
      <div
        class="c4"
      >
        <input
          class="c2"
          data-testid="todo-item-checkbox"
          type="checkbox"
        />
        <input
          class="c5"
          data-testid="inline-edit-input"
          type="text"
          value="item 3"
        />
        <div
          class="c6"
          data-testid="inline-edit-item-content"
        >
          item 3
        </div>
        <button
          class="c7 c8"
          data-testid="todo-item-delete-button"
          title="Delete"
        >
          <svg
            class="c9"
            data-file-name="SvgDelete"
          />
        </button>
      </div>
    </div>
    <div
      class="c10"
    >
      All Done!
      <button
        class="c7"
        data-testid="todo-list-add-button"
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing TodoItem should render correctly with empty store 1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c4 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c2 {
  margin-right: 8px;
}

.c5 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    />
    <div
      class="c4"
    >
      Empty list.
      <button
        class="c5"
        data-testid="todo-list-add-button"
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing TodoItem should render correctly without new item when user blur from the input if it is empty 1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c4 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c2 {
  margin-right: 8px;
}

.c5 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    />
    <div
      class="c4"
    >
      Empty list.
      <button
        class="c5"
        data-testid="todo-list-add-button"
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing TodoItem should render correctly without new item when user press enter if it is empty 1`] = `
.c0 {
  border: 1px solid #d6d6d6;
  margin: 0 auto;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 56px;
  border-bottom: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px;
  color: #e6e6e6;
  background-color: #fefefe;
}

.c4 {
  margin-top: auto;
  height: 32px;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 8px 0px 12px;
  color: #4d4d4d;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-height: 120px;
  max-height: 360px;
  overflow: auto;
}

.c2 {
  margin-right: 8px;
}

.c5 {
  background-color: #fff;
  width: 24px;
  height: 24px;
  padding: 2.4px 0;
  font-size: 14px;
  vertical-align: -1px;
  border-radius: 4px;
  border: 1px solid #1890ff;
  cursor: pointer;
  margin-left: auto;
  background-color: #1890ff;
  color: #fff;
}

.c5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        data-testid="todo-list-checkbox"
        type="checkbox"
      />
      What needs to be done?
    </div>
    <div
      class="c3"
    />
    <div
      class="c4"
    >
      Empty list.
      <button
        class="c5"
        data-testid="todo-list-add-button"
        title="Add item"
      >
        +
      </button>
    </div>
  </div>
</div>
`;
